--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="https://github.com/2zip">Marius S</a>.
   </div>
-  <script src="./js/main.js"></script>
+  <script src="/main.js"></script>
 </body>
 
 </html>
