--- a/index.html
+++ b/index.html
@@ -48,8 +48,9 @@
     </div> <!-- End of the .text-section -->
   </div> <!-- End of the .card section -->
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="https://github.com/2zip">Marius S</a>.
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank" rel="noopener">Frontend
+      Mentor</a>.
+    Coded by <a href="https://github.com/2zip" rel="noopener">Marius S</a>.
   </div>
   <script src="/main.js"></script>
 </body>
