--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       Mentor</a>.
     Coded by <a href="https://github.com/2zip" rel="noopener">Marius S</a>.
   </div>
-  <script src="/main.js"></script>
+  <script src="main.js"></script>
 </body>
 
 </html>
