--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./resources/images/favicon-32x32.png">
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./resources/css/style.css">
   <title>Frontend Mentor | FAQ Accordion Card</title>
 </head>
 
@@ -53,7 +53,7 @@
       Mentor</a>.
     Coded by <a href="https://github.com/2zip" rel="noopener">Marius S</a>.
   </div>
-  <script src="main.js"></script>
+  <script src="./resources/js/main.js"></script>
 </body>
 
 </html>
