--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 				target="_blank"
 				rel="noopener"
 				>Frontend Mentor</a
-			>. Coded by <a href="https://github.com/2zip" rel="noopener">Marius S</a>.
+			>. Coded by <a href="https://www.frontendmentor.io/profile/2zip" rel="noopener">Marius S</a>.
 		</footer>
 		<script src="./resources/js/main.js"></script>
 	</body>
