--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 			<!-- End of the .text-section -->
 		</div>
 		<!-- End of the .card section -->
-		<footer class="attribution" role="contentinfo">
+		<footer class="attribution">
 			Challenge by
 			<a
 				href="https://www.frontendmentor.io?ref=challenge"
